--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,7 @@
         <title>Pizza</title>
     </head>
     <body>
-        <h1>Pizza</h1>
+        <h1>Homemade Pizza</h1>
         <img src="../img/Pizza.jpeg" alt="a homemade Pizza">
         <h2>Description</h2>
         <p>This is a great recipe when you don't want to wait for the dough to rise. You just mix it and allow it to rest for 5 minutes and then it's ready to go! It yields a soft, chewy crust.</p>
