Improve the homepage's attractiveness
I have add some pictures and and descriptive texts to amke the homepage interesting.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
+        <p>Are you fade of having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
+        <img src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
+        <p>We have got the solution</p>
+        <img src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
+        <p>We, the odin recipe group, have developed a website that can help you cook at home home. our recipes are so easy to follow and interesting</p>
+        <p>Just click on the links below to get all the info you need to cook your favourite foods.</p>
         <ul>
             <li><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
+            <li><a href="./recipes/pizza.html">Homemade Pizza</a></li>
+            <li><a href="./recipes/burger.html">Homemade Burger</a></li>
         </ul>
     </body>
 </html>
