Add buttons to navigate the pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -45,5 +45,9 @@
         </ol>
         <h2>Tips</h2>
         <p>Feel free to substitute ricotta cheese for the cottage cheese for a more traditional cheese filling. You can also add layers of veggies (such as spinach and mushrooms) when layering your lasagna.</p>
+        <ul>
+            <li><a href="../index.html">Back</a></li>
+            <li><a href="./pizza.html">Next</a></li>
+        </ul>
     </body>
 </html>
