--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -32,5 +32,9 @@
         <h2>Tips</h2>
         <p>You can use all-purpose flour, but the bread flour makes a superior crust.</p>
         <p>If you have a pizza stone, dust it with cornmeal and use it instead of a greased pizza pan. </p>
+        <p><ul>
+            <li><a href="./lasagna.html">Back</a></li>
+            <li><a href="./burger.html">Next</a></li>
+        </ul></p>
     </body>
 </html>
