--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -27,5 +27,8 @@
             <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
             <li>Serve hot and enjoy!</li>
         </ol>
+        <ul>
+            <li><a href="./pizza.html">Back</a></li>
+        </ul>
     </body>
 </html>
