--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -29,6 +29,7 @@
         </ol>
         <ul>
             <li><a href="./pizza.html">Back</a></li>
+            <li><a href="../index.html">This is the last page. click here to get abck to the homepage.</a></li>
         </ul>
     </body>
 </html>
