Add appropriate punctuation mark

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
         <p>We have got the solution</p>
         <img src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
-        <p>We, the odin recipe group, have developed a website that can help you to cook at home. our recipes are so easy to follow and interesting</p>
+        <p>We, the odin recipe group, have developed a website that can help you to cook at home. our recipes are so easy to follow and interesting.</p>
         <p>Just click on the links below to get all the info you need to cook your favourite foods.</p>
         <ul>
             <li><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
