Add importance to a word

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin recipes</h1>
         <p>Are you fade of having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
         <img src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
-        <p>We have got the solution</p>
+        <p>We have got the <strong>solution</strong></p>
         <img src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
         <p>We, the odin recipe group, have developed a website that can help you to cook at home. our recipes are so easy to follow and interesting.</p>
         <p>Just click on the links below to get all the info you need to cook your favourite foods.</p>
