--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
-        <p>Are you fade of having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
+        <p>Are you fade off having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
         <img src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
         <p>We have got the <strong>solution</strong></p>
         <img src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
