Add attributes to some elements
added attributes to manipulate target elements in CSS.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin recipes project</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <h1>Odin recipes</h1>
-        <p>Are you fade off having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
-        <img src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
-        <p>We have got the <strong>solution</strong></p>
-        <img src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
+        <p class="unhappy_one">Are you fade off having to pay unfairly exaggrated money for a small and unhealthy food at restaurants?</p>
+        <img class="unhappy_img" src="./img/unhappy.jpeg" alt="a bored man eating at a restaurant">
+        <p class="solution_one">We have got a <strong>solution</strong></p>
+        <img class="solution_img" src="./img/solution.jpeg" alt="two cartoons carrying a red solution text">
         <p>We, the odin recipe group, have developed a website that can help you to cook at home. our recipes are so <em>easy to follow</em> and <em>interesting</em>.</p>
         <p>Just click on the links below to get all the info you need to cook your favourite foods.</p>
         <ul>
-            <li><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
+            <li class="left-end"><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
             <li><a href="./recipes/pizza.html">Homemade Pizza</a></li>
             <li><a href="./recipes/burger.html">Homemade Burger</a></li>
         </ul>
