Add attributes to the nav lists to target them individually

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Burger</title>
+        <link rel="stylesheet" href="../common.css">
     </head>
     <body>
         <h1>Homemade Burger</h1>
@@ -27,9 +28,9 @@
             <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
             <li>Serve hot and enjoy!</li>
         </ol>
-        <ul>
-            <li><a href="./pizza.html">Back</a></li>
-            <li><a href="../index.html">This is the last page. click here to get abck to the homepage.</a></li>
+        <ul id="nav">
+            <li id="id"><a href="./pizza.html">Back</a></li>
+            <li id="shit"><a href="../index.html">This is the last page. Click here to get back to the homepage.</a></li>
         </ul>
     </body>
 </html>
