--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
-    </head>
+        <link rel="stylesheet" href="../common.css">
     <body>
         <h1>Homemade Lasagna</h1>
         <img src="../img/lasagna.jpeg" alt="homemade lasagna">
@@ -45,9 +45,11 @@
         </ol>
         <h2>Tips</h2>
         <p>Feel free to substitute ricotta cheese for the cottage cheese for a more traditional cheese filling. You can also add layers of veggies (such as spinach and mushrooms) when layering your lasagna.</p>
-        <ul>
-            <li><a href="../index.html">Back</a></li>
-            <li><a href="./pizza.html">Next</a></li>
+       
+        <ul id="nav">
+            <li id="back"><a href="../index.html">Back</a></li>
+            <li id="next"><a href="./pizza.html">Next</a></li>
         </ul>
+        
     </body>
 </html>
