--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pizza</title>
+        <link rel="stylesheet" href="../common.css">
     </head>
     <body>
         <h1>Homemade Pizza</h1>
@@ -32,9 +33,9 @@
         <h2>Tips</h2>
         <p>You can use all-purpose flour, but the bread flour makes a superior crust.</p>
         <p>If you have a pizza stone, dust it with cornmeal and use it instead of a greased pizza pan. </p>
-        <p><ul>
-            <li><a href="./lasagna.html">Back</a></li>
-            <li><a href="./burger.html">Next</a></li>
-        </ul></p>
+        <ul id="nav">
+            <li id="back"><a href="./lasagna.html">Back</a></li>
+            <li id="next"><a href="./burger.html">Next</a></li>
+        </ul>
     </body>
 </html>
